--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Enlace que dirige a la raíz/inicio</p>
     <a href="/">Clic aquí</a>
 
-    <p>Enlace Interno</p>
+    <p>Sección Interna</p>
     <a href="#otra-seccion">Clic aquí</a>
 
 
