Se cambió el título al doc html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="assests/favicon.png"/>
-    <title>All About Me</title>
+    <title>BIT - Proyecto 1</title>
 </head>
 <body>
 
