Se completó etiquetas faltantes y se modicó el footer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <a href="#horario">Mi horario</a>
     <a href="#cancion">Mi canción favorita</a>
     <a href="#video">Mi video</a>
+    <a href="#juego">Mi videojuego</a>
   </nav>
 
   <main>
@@ -91,11 +92,23 @@
   <section id="cancion">
     <h3>Mi canción favorita</h3>
     <audio src="assests/Avicii - The Nights (Lyrics).mp3" controls></audio>
+    <dl>
+      <dt>Nombre:</dt>
+      <dd>The Nights</dd>
+      <dt>Autor:</dt>
+      <dd>Avicii</dd>
+    </dl>
+    
   </section>
 
   <section id="video">
     <h3>Mi video favorito</h3>
     <video src="assests/video.mp4" autoplay muted loop></video>
+  </section>
+
+  <section id="juego">
+    <h3>Mi videojuego favorito</h3>
+    <iframe style="max-width:100%" src="https://wordwall.net/es/embed/6399c54af4ff4bff80a2b316f538667b?themeId=26&templateId=5&fontStackId=1" width="500" height="380" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <footer id="footer">
