Se cambió el nombre a la foto del main

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </nav>
 
   <main>
-    <img src="assests/me-foto.jpg" alt="Imagen de profesor">
+    <img src="assests/mi-foto.jpg" alt="Imagen de profesor">
     <p>Soy apasionado por el estudio de las lenguas extranjeras. Uno de mis sueños es ser políglota algún día. Me gusta ayudar a que las personas vean que el inglés no es tan difícil como parece.</p>
     <a href="#footer">
       <button>Contacto</button>
@@ -123,6 +123,6 @@
   <a href="#inicio" class="up">
     <img src="assests/up.png" alt="ícono hacia arriba" href="#index">
   </a>
-  
+ 
 </body>
 </html>
