--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
   <header id="inicio">
     <h1>Brian Alexander Córdoba Mingán</h1>
     <div class="wave" style="height: 130px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 342.83,-25.14 508.17,88.33 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
+    <img src="assests/menu.png" alt="Menú desplegable" id="menu">
   </header>
   
-  <nav>
-    <a href="#pasatiempos">Mis pasatiempos</a>
-    <a href="#receta">Mi receta</a>
-    <a href="#horario">Mi horario</a>
-    <a href="#cancion">Mi canción favorita</a>
-    <a href="#video">Mi video</a>
-    <a href="#juego">Mi videojuego</a>
-  </nav>
+  <input type="checkbox" id="checkbox">
+  <label for="checkbox">
+    <nav>
+      <a href="#pasatiempos">Mis pasatiempos</a>
+      <a href="#receta">Mi receta</a>
+      <a href="#horario">Mi horario</a>
+      <a href="#cancion">Mi canción favorita</a>
+      <a href="#video">Mi video</a>
+      <a href="#juego">Mi videojuego</a>
+    </nav>
+  </label>
+  
 
   <main>
     <img src="assests/mi-foto.jpg" alt="Imagen de profesor">
@@ -117,6 +122,7 @@
       <p><strong>Email: </strong> briancormin@gmail.com</p>
       <p><strong>WhatsApp: </strong> 317 325 3124</p>
     </div>
+    <a href="https://github.com/brianco007/www.git" target="_blank" class="repo">GitHub - Repositorio</a>
   </footer>
 
 
