Se agregó enlaces en el footer

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
       <p><strong>WhatsApp: </strong> 317 325 3124</p>
     </div>
     <a href="https://github.com/brianco007/www.git" target="_blank" class="repo">GitHub - Repositorio</a>
+    <h4>Proyectos BIT</h3>
+    <a href="#">Ejercicios Javascript</a>
+    <a href="#">Sitio Web de Empresa</a>
   </footer>
 
 
