Se dió estilos a enlaces del footer

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
       <p><strong>Email: </strong> briancormin@gmail.com</p>
       <p><strong>WhatsApp: </strong> 317 325 3124</p>
     </div>
-    <a href="https://github.com/brianco007/www.git" target="_blank" class="repo">GitHub - Repositorio</a>
+    <a href="https://github.com/brianco007/" target="_blank" class="repo"><img src="assests/github.png" width="40px" height="40px" alt="ícono GitHub"></a>
     <h4>Proyectos BIT</h3>
-    <a href="#">Ejercicios Javascript</a>
-    <a href="#">Sitio Web de Empresa</a>
+    <a href="https://brianco007.github.io/proyecto2/" target="_blank" class="repo">Sitio Web de Empresa</a>
+    <a href="https://brianco007.github.io/ejerciciosJS/" target="_blank" class="repo">Ejercicios Javascript</a>
   </footer>
 
 
