--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
 
   <main>
-    <img src="assests/mi-foto.jpg" alt="Imagen de profesor">
+    <img src="assets/mi-foto.jpg" alt="Imagen de profesor">
     <p>Soy apasionado por el estudio de las lenguas extranjeras. Uno de mis sueños es ser políglota algún día. Me gusta ayudar a que las personas vean que el inglés no es tan difícil como parece.</p>
     <a href="#footer">
       <button>Contacto</button>
