Se actualizó atributo  href

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/jpg" href="assests/favicon.png"/>
+    <link rel="icon" type="image/jpg" href="assets/favicon.png"/>
     <title>BIT - Proyecto 1</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
   <header id="inicio">
     <h1>Brian Alexander Córdoba Mingán</h1>
     <div class="wave" style="height: 130px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 342.83,-25.14 508.17,88.33 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
-    <img src="assests/menu.png" alt="Menú desplegable" id="menu">
+    <img src="assets/menu.png" alt="Menú desplegable" id="menu">
   </header>
   
   <input type="checkbox" id="checkbox">
@@ -96,7 +96,7 @@
 
   <section id="cancion">
     <h3>Mi canción favorita</h3>
-    <audio src="assests/Avicii - The Nights (Lyrics).mp3" controls></audio>
+    <audio src="assets/Avicii - The Nights (Lyrics).mp3" controls></audio>
     <dl>
       <dt>Nombre:</dt>
       <dd>The Nights</dd>
@@ -108,7 +108,7 @@
 
   <section id="video">
     <h3>Mi video favorito</h3>
-    <video src="assests/video.mp4" autoplay muted loop></video>
+    <video src="assets/video.mp4" autoplay muted loop></video>
   </section>
 
   <section id="juego">
@@ -122,7 +122,7 @@
       <p><strong>Email: </strong> briancormin@gmail.com</p>
       <p><strong>WhatsApp: </strong> 317 325 3124</p>
     </div>
-    <a href="https://github.com/brianco007/" target="_blank" class="repo"><img src="assests/github.png" width="40px" height="40px" alt="ícono GitHub"></a>
+    <a href="https://github.com/brianco007/" target="_blank" class="repo"><img src="assets/github.png" width="40px" height="40px" alt="ícono GitHub"></a>
     <h4>Proyectos BIT</h3>
     <a href="https://brianco007.github.io/proyecto2/" target="_blank" class="repo">Sitio Web de Empresa</a>
     <a href="https://brianco007.github.io/ejerciciosJS/" target="_blank" class="repo">Ejercicios Javascript</a>
@@ -130,7 +130,7 @@
 
 
   <a href="#inicio" class="up">
-    <img src="assests/up.png" alt="ícono hacia arriba" href="#index">
+    <img src="assets/up.png" alt="ícono hacia arriba" href="#index">
   </a>
  
 </body>
