Se eliminó etiqueta  iframe

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <section id="juego">
     <h3>Mi videojuego favorito</h3>
-    <iframe style="max-width:100%" src="https://wordwall.net/es/embed/6399c54af4ff4bff80a2b316f538667b?themeId=26&templateId=5&fontStackId=1" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+    <!-- <iframe style="max-width:100%" src="https://wordwall.net/es/embed/6399c54af4ff4bff80a2b316f538667b?themeId=26&templateId=5&fontStackId=1" width="500" height="380" frameborder="0" allowfullscreen></iframe> -->
   </section>
 
   <footer id="footer">
