Se solucionó posición del checkbox para responsive

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     <h4>Proyectos BIT</h3>
     <a href="https://brianco007.github.io/proyecto2/" target="_blank" class="repo">Sitio Web de Empresa</a>
     <a href="https://brianco007.github.io/ejerciciosJS/" target="_blank" class="repo">Ejercicios Javascript</a>
+    <a href="https://brianco007.github.io/pokeapi/" target="_blank" class="repo">PokeApi</a>
   </footer>
 
 
